# lsp-client

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  justfile  mcp.json  pyproject.toml  test_basedpyright.py
.devin/: wiki.json
.github/: release.yml
.github/workflows/: ci.yml  docs.yml  opencode.yml  publish.yml  release.yml  test.yml  update_containers.yml  version-bump.yml
.mcp/: lsp_client.py
container/: README.md  registry.toml
container/deno/: ContainerFile
container/gopls/: ContainerFile
container/pyrefly/: ContainerFile
container/pyright/: ContainerFile
container/rust-analyzer/: ContainerFile
container/ty/: ContainerFile
container/typescript/: ContainerFile
doc/advanced/: capability-groups.md  client-capability.md
doc/contribution/: TODO.md
docker/: Dockerfile.csharp  Dockerfile.go  Dockerfile.js  Dockerfile.python
docs/: DESIGN.md  RELEASE.md  configuration.md  language-configuration.md
docs/contribution/: how-to-add-new-capabilities.md  how-to-add-new-servers.md  how-to-create-new-capabilities.md
examples/: basic.py  cap_protocol.py  custom_cap.py  default_configuration.py  handle_message.py  protocol.py  pyrefly.py  pyright_container.py  pyright_docker.py  run_basedpyright.py  run_ty.py  rust_analyzer.py  test_ty.py  tsserver.py  typescript.py
registry/: wiki.schema.json
scripts/: server_versions.py  update_containers.py
src/lsp_client/: __init__.py  channel.py  cli.py  client.py  jsonrpc.py  types.py
src/lsp_client/capability/: __init__.py  build.py  client.py  file_buffer.py  group.py  groups.py  notification.py  protocol.py  request.py  response.py  server_req.py  utils.py
src/lsp_client/capability/notification/: __init__.py  did_change_configuration.py  text_document_synchronize.py
src/lsp_client/capability/request/: __init__.py  call_hierarchy.py  completion.py  declaration.py  definition.py  document_symbol.py  hover.py  implementation.py  inlay_hint.py  inline_value.py  pull_diagnostic.py  reference.py  signature_help.py  type_definition.py  type_hierarchy.py  workspace_symbol.py
src/lsp_client/capability/server_notification/: __init__.py  log_message.py  log_trace.py  publish_diagnostics.py  show_message.py
src/lsp_client/capability/server_request/: __init__.py  configuration.py  inlay_hint_refresh.py  show_document_request.py  show_message_request.py  workspace_configuration.py  workspace_folders.py
src/lsp_client/cli/: __init__.py  __main__.py  daemon.py  model.py  servers.py
src/lsp_client/client/: __init__.py  abc.py  base.py  capabilities.py  file_buffer.py  lang.py  server_req.py  stdio.py  utils.py
src/lsp_client/clients/: __init__.py  base.py  based_pyright.py  gopls.py  pyrefly.py  pyright.py  rust_analyzer.py  tsserver.py  ty.py  typescript.py
src/lsp_client/clients/deno/: README.md  __init__.py  client.py  extension.py  models.py
src/lsp_client/jsonrpc/: convert.py  parse.py  types.py
src/lsp_client/mcp/: adapter.py  cli.py  locate.py  protocol.py  sdk.py
src/lsp_client/protocol/: __init__.py  capability.py  client.py  hook.py
src/lsp_client/server/: __init__.py  abc.py  base.py  container.py  docker.py  event.py  exception.py  jsonrpc.py  local.py  process.py  socket.py  stdio.py  type.py  types.py  utils.py
src/lsp_client/servers/: based_pyright.py  clangd.py  copilot.py  csharp_langserver.py  digital-ide.py  gopls.py  metals.py  pyrefly.py  ruff.py  rust_analyzer.py  ty.py  typescript-langserver.py  utils.py  verible.py
src/lsp_client/utils/: attrs.py  channel.py  config.py  inspect.py  path.py  type_guard.py  workspace.py
tests/: test_basic.py  test_capabilities.py  test_default_configuration.py  test_inspect_clients.py
tests/mock_server/: example.py  mock_server.py
tests/utils/: repo.py
